--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "19.1.0",
     "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.180.0"
   },
   "devDependencies": {
